--- a/david/src/styles/components/_banner.scss
+++ b/david/src/styles/components/_banner.scss
@@ -1,6 +1,8 @@
 .banner{
     width: 100%;
-    border-bottom: 1px solid purple;
+    border-bottom: 1px solid $neon-blue;
+    background-color:#26272b;
+    height:40rem;
     img{
         width: 100%;
         height:40rem;
