--- a/david/src/styles/components/_navbar.scss
+++ b/david/src/styles/components/_navbar.scss
@@ -7,5 +7,5 @@
     color: white;
     width:70%;
     padding:10px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    // box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
