--- a/david/src/styles/index.css
+++ b/david/src/styles/index.css
@@ -206,7 +206,7 @@ body {
 
 .home section img {
   width: 50%;
-  height: 40rem;
+  height: 30rem;
 }
 
 .home section div {
@@ -234,9 +234,388 @@ body {
   width: 70%;
 }
 
+.workouts .title {
+  text-align: center;
+}
+
+.workouts .flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 100%;
+  padding: 20px;
+}
+
+.workouts .chest {
+  width: 25rem;
+  height: 35rem;
+  border: black 1px solid;
+  background-image: url("https://i.redd.it/6sv3euhb99p71.jpg");
+  background-size: cover;
+}
+
+.workouts .chest h2 {
+  text-align: center;
+  font-size: 2.5rem;
+  color: white;
+  margin-top: 1rem;
+}
+
+.workouts .chest p {
+  margin-top: 0.5rem;
+  text-align: center;
+  color: white;
+}
+
+.workouts .chest .btn-6 {
+  width: 13rem;
+  background-color: white;
+  line-height: 42px;
+  border: 1px solid black;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+          box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+  border-radius: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  margin-top: 23rem;
+}
+
+.workouts .chest .btn-6 span {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.workouts .chest .btn-6:before,
+.workouts .chest .btn-6:after {
+  position: absolute;
+  content: "";
+  height: 0%;
+  width: 1px;
+  -webkit-box-shadow: -1px -1px 20px 0px white, -4px -4px 5px 0px white, 7px 7px 20px 0px rgba(0, 0, 0, 0.4), 4px 4px 5px 0px rgba(0, 0, 0, 0.3);
+          box-shadow: -1px -1px 20px 0px white, -4px -4px 5px 0px white, 7px 7px 20px 0px rgba(0, 0, 0, 0.4), 4px 4px 5px 0px rgba(0, 0, 0, 0.3);
+}
+
+.workouts .chest .btn-6:before {
+  right: 0;
+  top: 0;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+
+.workouts .chest .btn-6:after {
+  left: 0;
+  bottom: 0;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+
+.workouts .chest .btn-6:hover {
+  background: transparent;
+  color: #89CFF0;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  background-color: white;
+}
+
+.workouts .chest .btn-6:hover:before {
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+  height: 100%;
+}
+
+.workouts .chest .btn-6:hover:after {
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+  height: 100%;
+}
+
+.workouts .chest .btn-6 span:before,
+.workouts .chest .btn-6 span:after {
+  position: absolute;
+  content: "";
+  -webkit-box-shadow: -1px -1px 20px 0px white, -4px -4px 5px 0px white, 7px 7px 20px 0px rgba(0, 0, 0, 0.4), 4px 4px 5px 0px rgba(0, 0, 0, 0.3);
+          box-shadow: -1px -1px 20px 0px white, -4px -4px 5px 0px white, 7px 7px 20px 0px rgba(0, 0, 0, 0.4), 4px 4px 5px 0px rgba(0, 0, 0, 0.3);
+}
+
+.workouts .chest .btn-6 span:before {
+  left: 0;
+  top: 0;
+  width: 0%;
+  height: .5px;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+
+.workouts .chest .btn-6 span:after {
+  right: 0;
+  bottom: 0;
+  width: 0%;
+  height: .5px;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+
+.workouts .chest .btn-6 span:hover:before {
+  width: 100%;
+}
+
+.workouts .chest .btn-6 span:hover:after {
+  width: 100%;
+}
+
+.workouts .legs {
+  width: 25rem;
+  height: 35rem;
+  border: black 1px solid;
+  background-image: url("https://i.redd.it/6sv3euhb99p71.jpg");
+  background-size: cover;
+}
+
+.workouts .legs h2 {
+  text-align: center;
+  font-size: 2.5rem;
+  color: white;
+  margin-top: 1rem;
+}
+
+.workouts .legs p {
+  margin-top: .5rem;
+  text-align: center;
+  color: white;
+}
+
+.workouts .legs .btn-6 {
+  width: 13rem;
+  background-color: white;
+  line-height: 42px;
+  border: 1px solid black;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+          box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+  border-radius: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  margin-top: 23rem;
+}
+
+.workouts .legs .btn-6 span {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.workouts .legs .btn-6:before,
+.workouts .legs .btn-6:after {
+  position: absolute;
+  content: "";
+  height: 0%;
+  width: 1px;
+  -webkit-box-shadow: -1px -1px 20px 0px white, -4px -4px 5px 0px white, 7px 7px 20px 0px rgba(0, 0, 0, 0.4), 4px 4px 5px 0px rgba(0, 0, 0, 0.3);
+          box-shadow: -1px -1px 20px 0px white, -4px -4px 5px 0px white, 7px 7px 20px 0px rgba(0, 0, 0, 0.4), 4px 4px 5px 0px rgba(0, 0, 0, 0.3);
+}
+
+.workouts .legs .btn-6:before {
+  right: 0;
+  top: 0;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+
+.workouts .legs .btn-6:after {
+  left: 0;
+  bottom: 0;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+
+.workouts .legs .btn-6:hover {
+  background: transparent;
+  color: #89CFF0;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  background-color: white;
+}
+
+.workouts .legs .btn-6:hover:before {
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+  height: 100%;
+}
+
+.workouts .legs .btn-6:hover:after {
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+  height: 100%;
+}
+
+.workouts .legs .btn-6 span:before,
+.workouts .legs .btn-6 span:after {
+  position: absolute;
+  content: "";
+  -webkit-box-shadow: -1px -1px 20px 0px white, -4px -4px 5px 0px white, 7px 7px 20px 0px rgba(0, 0, 0, 0.4), 4px 4px 5px 0px rgba(0, 0, 0, 0.3);
+          box-shadow: -1px -1px 20px 0px white, -4px -4px 5px 0px white, 7px 7px 20px 0px rgba(0, 0, 0, 0.4), 4px 4px 5px 0px rgba(0, 0, 0, 0.3);
+}
+
+.workouts .legs .btn-6 span:before {
+  left: 0;
+  top: 0;
+  width: 0%;
+  height: .5px;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+
+.workouts .legs .btn-6 span:after {
+  right: 0;
+  bottom: 0;
+  width: 0%;
+  height: .5px;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+
+.workouts .legs .btn-6 span:hover:before {
+  width: 100%;
+}
+
+.workouts .legs .btn-6 span:hover:after {
+  width: 100%;
+}
+
+.workouts .back {
+  width: 25rem;
+  height: 35rem;
+  border: black 1px solid;
+  background-image: url("https://i.redd.it/6sv3euhb99p71.jpg");
+  background-size: cover;
+}
+
+.workouts .back h2 {
+  text-align: center;
+  font-size: 2.5rem;
+  color: white;
+  margin-top: 1rem;
+}
+
+.workouts .back p {
+  margin-top: .5rem;
+  text-align: center;
+  color: white;
+}
+
+.workouts .back .btn-6 {
+  width: 13rem;
+  background-color: white;
+  line-height: 42px;
+  border: 1px solid black;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+          box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+  border-radius: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  margin-top: 23rem;
+}
+
+.workouts .back .btn-6 span {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.workouts .back .btn-6:before,
+.workouts .back .btn-6:after {
+  position: absolute;
+  content: "";
+  height: 0%;
+  width: 1px;
+  -webkit-box-shadow: -1px -1px 20px 0px white, -4px -4px 5px 0px white, 7px 7px 20px 0px rgba(0, 0, 0, 0.4), 4px 4px 5px 0px rgba(0, 0, 0, 0.3);
+          box-shadow: -1px -1px 20px 0px white, -4px -4px 5px 0px white, 7px 7px 20px 0px rgba(0, 0, 0, 0.4), 4px 4px 5px 0px rgba(0, 0, 0, 0.3);
+}
+
+.workouts .back .btn-6:before {
+  right: 0;
+  top: 0;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+
+.workouts .back .btn-6:after {
+  left: 0;
+  bottom: 0;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+
+.workouts .back .btn-6:hover {
+  background: transparent;
+  color: #89CFF0;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  background-color: white;
+}
+
+.workouts .back .btn-6:hover:before {
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+  height: 100%;
+}
+
+.workouts .back .btn-6:hover:after {
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+  height: 100%;
+}
+
+.workouts .back .btn-6 span:before,
+.workouts .back .btn-6 span:after {
+  position: absolute;
+  content: "";
+  -webkit-box-shadow: -1px -1px 20px 0px white, -4px -4px 5px 0px white, 7px 7px 20px 0px rgba(0, 0, 0, 0.4), 4px 4px 5px 0px rgba(0, 0, 0, 0.3);
+          box-shadow: -1px -1px 20px 0px white, -4px -4px 5px 0px white, 7px 7px 20px 0px rgba(0, 0, 0, 0.4), 4px 4px 5px 0px rgba(0, 0, 0, 0.3);
+}
+
+.workouts .back .btn-6 span:before {
+  left: 0;
+  top: 0;
+  width: 0%;
+  height: .5px;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+
+.workouts .back .btn-6 span:after {
+  right: 0;
+  bottom: 0;
+  width: 0%;
+  height: .5px;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+
+.workouts .back .btn-6 span:hover:before {
+  width: 100%;
+}
+
+.workouts .back .btn-6 span:hover:after {
+  width: 100%;
+}
+
 .banner {
   width: 100%;
-  border-bottom: 1px solid purple;
+  border-bottom: 1px solid #00aeff;
+  background-color: #26272b;
+  height: 40rem;
 }
 
 .banner img {
@@ -425,7 +804,5 @@ body {
   color: white;
   width: 70%;
   padding: 10px;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-          box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 /*# sourceMappingURL=index.css.map */
